# Taller2_arquitectura_II

./: CMakeLists.txt  Practicos.c  Practicos.h  main.c  pi.c
